[project]
name = "project2fina4011projectfinal"
version = "0.1.0"
description = ""
authors = [
    {name = "gdela72",email = "gael.delatorre@marquette.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.57.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "yfinance (>=1.3.0,<2.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "project2fina4011projectfinal", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
